# piscine-rust

./: Readme.md  push.sh
adding/: Cargo.toml
adding/src/: lib.rs
adding_twice/: Cargo.toml
adding_twice/src/: lib.rs
arrange_it/src/: lib.rs
arrays/src/: lib.rs  main.rs
banner/src/: lib.rs
bigger/src/: lib.rs  main.rs
bigger_test/: Cargo.toml
bigger_test/src/: main.rs
blood_types/: texte.txt
blood_types/src/: lib.rs
blood_types_s/src/: main.rs
border_cross/src/: lib.rs  main.rs
borrow_box/src/: lib.rs
borrow_me_the_reference/src/: lib.rs  main.rs
box_it/src/: lib.rs
box_recursion_test/: Cargo.toml
boxing_todo/: Cargo.toml  malformed_object.json  todo.json  todo_empty.json
boxing_todo/src/: err.rs  lib.rs
capitalizing_test/: Cargo.toml
card_deck/: Cargo.toml
cipher_test/: Cargo.toml
commits_stats/: Cargo.toml
commits_stats_test/: Cargo.toml
copy/src/: lib.rs  (+1 more)
expected_variable/: Cargo.toml
find_factorial_test/: Cargo.toml
generics_list_test/: Cargo.toml
get_products/: Cargo.toml
macro_calculator/: Cargo.toml
macro_calculator_test/: Cargo.toml
matrix_display_test/: Cargo.toml
matrix_mult/: Cargo.toml
matrix_ops/: Cargo.toml
matrixdeterminant/: Cargo.toml
mobs/: Cargo.toml
profanityfilter/: Cargo.toml
queens_test/: Cargo.toml
questionmark/: Cargo.toml
reverse-it/: Cargo.toml
reverse_it_train/: Cargo.toml
roman_numbers_test/: Cargo.toml
rpn_test/: Cargo.toml
sales/: Cargo.toml
scytale_cipher_test/: Cargo.toml
spelling_test/: Cargo.toml
talking_test/: Cargo.toml
training/: Cargo.toml
(+172 files in other folders)
